# automatiion_latest

./: .env.example  .gitignore  BRUTALLY_HONEST_FINAL_ASSESSMENT.md  BRUTALLY_HONEST_FINAL_ASSESSMENT_UPDATED.md  BRUTAL_HONEST_COMPETITIVE_ASSESSMENT.md  BRUTAL_HONEST_FINAL_REVERIFICATION.md  BRUTAL_HONEST_SUPER_OMEGA_SPEC_ASSESSMENT.md  COMPETITIVE_ANALYSIS.md  COMPLETE_FLOW_STATUS_REPORT.md  COMPLETE_GUIDEWIRE_INTEGRATION_STATUS.md  COMPREHENSIVE_CODE_ANALYSIS_REPORT.json  COMPREHENSIVE_CODE_FLOW_ANALYSIS_SUMMARY.md  COMPREHENSIVE_REAL_WORLD_FINAL_REPORT.json  COMPREHENSIVE_SUPER_OMEGA_REVERIFICATION.md  CRITICAL_REVERIFICATION_ASSESSMENT.md  Cargo.toml  DATABASE_SETUP_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  ENTERPRISE_ENHANCEMENT_PLAN.md  FINAL_100K_SELECTORS_IMPLEMENTATION_REPORT.md  FINAL_100_PERCENT_ASSESSMENT.md  FINAL_100_PERCENT_IMPLEMENTATION_REPORT.md  FINAL_100_PERCENT_READINESS_REPORT.md  FINAL_100_PERCENT_REAL_VERIFICATION.md  FINAL_100_PERCENT_REAL_WORLD_VERIFICATION.md  FINAL_100_PERCENT_SUMMARY.md  FINAL_100_PERCENT_VERIFICATION.md  FINAL_AGENTIC_AI_ENHANCEMENTS.md  FINAL_ENTERPRISE_SUMMARY.md  FINAL_MULTI_DOMAIN_COMPLIANCE_ASSESSMENT.json  FINAL_REVERIFICATION_REPORT.md  FINAL_SUPER_OMEGA_ASSESSMENT.json  FINAL_SUPER_OMEGA_STATUS.md  FINAL_VERIFICATION_CLAIM.md  FIXED_SUPER_OMEGA_100_PERCENT_REPORT.md  GUIDEWIRE_INTEGRATION_COMPLETE.md  HONEST_README_ALIGNMENT_ASSESSMENT.md  HONEST_SUPER_OMEGA_ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  (+212 more)
benches/: performance_benchmarks.rs
browser_extension/: background.js  content-script.js  content.js  edge-kernel.js  manifest.json
configs/: data_fabric_providers.json
data/: audit.db  automation.db  selectors_dependency_free.db
data/exports/: export_1755076592.json  export_1755078017.json  export_1755087468.json  export_1755087487.json
data/vector_db/: chroma.sqlite3
deploy/: production_setup.py
edge_kernel/tauri_app/src-tauri/: Cargo.toml
edge_kernel/tauri_app/src-tauri/src/: evidence_collector.rs  main.rs  micro_planner.rs  vision_processor.rs
evidence/: 0cff2dbc-abac-48e5-a901-ec3e9ee5f09b_execution_result.json  20c6b892-1666-4fd8-92b2-7bbf263b9412_task_scheduling.json  280f1313-cd28-4d60-b2fe-c3cef9a66540_task_scheduling.json  2a79f6c9-6ba3-4423-b59e-382451324d5e_intent_analysis.json  3155efd6-3cd3-4d86-a3a2-8cf3ddaa37fc_execution_result.json  371da69e-365a-4c70-b20b-1e9f4006f521_intent_analysis.json  3cb03c5d-88a1-490f-9240-49df093f7fb8_intent_analysis.json  417d5cfc-319f-4ff3-89a3-3205d5d8fa17_task_scheduling.json  5466d82c-5923-4e8f-a5bb-75ef5b0e4fce_intent_analysis.json  61f5abe5-f61d-4f0f-95fd-98d9430a885d_task_scheduling.json  63342f45-ce41-4066-ad5c-76be963d2a53_autonomous_execution.json  6366fbfb-752f-48fa-87fe-c572b88b558f_task_scheduling.json  78bdd47e-a667-4689-a036-a07cf4309af6_execution_result.json  799c660c-114a-4e46-bf57-7bc4346484e5_task_scheduling.json  79ce934a-2605-4530-b3d3-a7bdc8b0d85f_intent_analysis.json  85514b4c-e9de-4e1e-ba96-8c9c4f6f9de1_autonomous_execution.json  86e62e8a-94fd-455c-8120-6aefa8a103c0_autonomous_execution.json  8fabdb8b-2455-4e43-8d1a-6b07af0ae32e_execution_result.json  9ba6a4f8-35df-47dd-a5ed-9360b71c0ea0_execution_result.json  a40c7bee-9c09-4e79-ba64-950c146816b1_intent_analysis.json  a81dc3a8-196f-432a-bcf9-1046c9494634_intent_analysis.json  ab441e37-4cf7-4dfe-9415-79cf36ac61c6_execution_result.json  c0763be6-cb91-42e8-a0eb-82b11294719f_execution_result.json  c63edce0-cad5-46b9-8044-a2bc5ae41282_intent_analysis.json  dc345995-cc95-4875-abc8-d24c6ad22e59_execution_result.json  dddc7f49-3c31-46d2-9a5d-a5b9ebef7d5f_intent_analysis.json  e46ee57a-11ad-4a6f-ab4d-45c17597fab1_task_scheduling.json  e5d50afb-1af5-418e-a86b-207b2db3dca6_task_scheduling.json  e82f34b1-7afc-4271-9a45-cbb2cf6e2aaa_execution_result.json  ff24ce97-b2a8-40ea-80fb-829de3b5db11_task_scheduling.json
frontend/: README.md  enhanced-chat-interface.tsx  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
reports/: platform_assessment_1755255372.json  platform_assessment_1755256139.json  platform_assessment_1755256183.json  platform_assessment_1755256625.json  platform_assessment_1755257072.json  platform_assessment_1755279565.json
runs/b2b_procurement_1755267947/: facts.jsonl  report.json
runs/defi_crypto_1755267948/: facts.jsonl  report.json
runs/demo_run_001_14e0383f/: report.json
runs/demo_run_001_2868cbe0/: report.json
runs/demo_run_001_2d2b17ce/: report.json
runs/demo_run_001_34c28d89/: report.json
runs/demo_run_002_0a6698cf/: report.json
runs/demo_run_002_15ec1823/: report.json
runs/demo_run_002_3c982993/: report.json
runs/demo_run_002_a563a31d/: report.json
runs/demo_run_003_0def4411/: report.json
runs/demo_run_003_3fe4438b/: report.json
runs/demo_run_003_b7a3f481/: report.json
runs/demo_run_003_d122a750/: report.json
runs/demo_run_004_49069c44/: report.json
runs/demo_run_004_6c49a922/: report.json
runs/demo_run_004_784e4df0/: report.json
runs/demo_run_004_cb066abc/: report.json
runs/demo_run_005_21100448/: report.json
runs/demo_run_005_6c5b4d87/: report.json
runs/demo_run_005_85a76b16/: report.json
runs/demo_run_005_b951fd5d/: report.json
runs/demo_run_006_18d5cad6/: report.json
runs/demo_run_006_1ad8e616/: report.json
runs/demo_run_006_56ea1388/: report.json
runs/demo_run_006_a096ee32/: report.json
runs/demo_run_007_105fc781/: report.json
runs/demo_run_007_87435675/: report.json
runs/demo_run_007_dee86382/: report.json
runs/demo_run_007_eb6c1dda/: report.json
runs/demo_run_008_0d56cb70/: report.json
runs/demo_run_008_290d9111/: report.json
runs/demo_run_008_3be1fc17/: report.json
runs/demo_run_008_7e9d9f03/: report.json
runs/demo_run_009_287ab5fd/: report.json
runs/demo_run_009_6f02578f/: report.json
runs/demo_run_009_8c81de49/: report.json
scripts/: generate_100k_selectors_direct.py  generate_platform_selectors.py  install_playwright_browsers.py
src/: __init__.py  evidence_collector.rs  vision_processor.rs
(+1140 files in other folders)
