[package]
name = "super-omega-edge"
version = "1.0.0"
description = "SUPER-OMEGA Edge Kernel - Native desktop driver with sub-25ms execution"
authors = ["SUPER-OMEGA Team"]
license = "MIT"
repository = "https://github.com/super-omega/edge-kernel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
headless_chrome = "1.0"
screenshot = "0.4"
image = "0.24"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
opencv = { version = "0.88", features = ["opencv-4"] }
tensorflow = "0.21"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
whisper-rs = "0.10"
web-sys = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_log = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
bincode = "1.3"
rmp-serde = "1.1"
flate2 = "1.0"
zstd = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "super-omega-edge"
path = "src/main.rs"