[package]
name = "super-omega-edge"
version = "1.0.0"
description = "SUPER-OMEGA Edge Kernel - Native desktop driver with sub-25ms execution"
authors = ["SUPER-OMEGA Team"]
license = "MIT"
repository = "https://github.com/super-omega/edge-kernel"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
headless_chrome = "1.0"
screenshot = "0.4"
image = "0.24"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Use candle for ML instead of heavy dependencies
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
# Audio processing
rodio = "0.17"
# Async runtime
futures = "0.3"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
env_logger = "0.10"
# File system
walkdir = "2.3"
# Networking
hyper = { version = "0.14", features = ["full"] }
# JSON handling
# Hash maps
dashmap = "5.5"
# System info
sysinfo = "0.29"
# Process management
subprocess = "0.2"
# Time utilities
instant = "0.1"

[features]
default = []

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "super-omega-edge"
path = "src/main.rs"